종류별 상품, 종류별 상품 상세

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
-.MuiPaper-root{
+.MuiToolbar-root,
+.MuiDrawer-paper
+{
   background-color: #333538!important;
   color: white!important
 }
 
+.MuiPaper-rounded
+{
+  margin: 10px
+}
